--- a/index.html
+++ b/index.html
@@ -8,17 +8,19 @@
   <body>
     <!-- Header section -->
     <header>
-      <a href="Webstudio">Web Studio</a>
       <nav>
+        <a href="/index.html">WebStudio</a>
         <ul>
           <li href="">Studio</li>
           <li href="">Portfolio</li>
           <li href="">Contacts</li>
         </ul>
       </nav>
+      <address>
       <ul>
         <li href="mailto:info@devstudio.com">info@devstudio.com</li>
         <li href="tel:+110001111111">+11 (000) 111-11-11</li>
+    </address>
       </ul>
     </header>
     <main>
@@ -26,33 +28,32 @@
       <h1>Effective Solutions for Your Business</h1>
       <button type="button" href="">Order Service</button>
       <!-- Feature section -->
+      <h2>Fetaure section</h2>
       <ul>
         <li>
-          <h2>Strategy</h2>
+          <h3>Strategy</h3>
           <p>
-            Our goal is to identify the business problem to walk away with the
-            perfect and creative solution.
+            Our goal is to identify the business<br>problem to walk away with the<br>perfect and creative solution.
           </p>
         </li>
         <li>
-          <h2>Punctuality</h2>
+          <h3>Punctuality</h3>
           <p>
-            Bring the key message to the brand's audience for the best price
-            within the shortest possible time.
+            Bring the key message to the<br>brand's audience for the best price<br>within the shortest possible time.
           </p>
         </li>
         <li>
-          <h2>Diligence</h2>
+          <h3>Diligence</h3>
           <p>
-            Research and confirm brands that present the strongest digital
-            growth opportunities and minimize risk.
+            Research and confirm brands that<br>present the strongest digital
+            growth<br>opportunities and minimize risk.
           </p>
         </li>
         <li>
-          <h2>Technologies</h2>
+          <h3>Technologies</h3>
           <p>
-            Design practice focused on digital experiences. We bring forth a
-            deep passion for problem-solving.
+            Design practice focused on<br>digital experiences. We bring forth a
+            deep<br>passion for problem-solving.
           </p>
         </li>
       </ul>
@@ -69,7 +70,6 @@
           <h3>Mark Guerrero</h3>
           <p>Product Designer</p>
         </li>
-        <li></li>
         <li>
           <img
             src="/images/tom-ford.jpg"
@@ -103,7 +103,7 @@
       </ul>
     </main>
     <footer>
-      <a href="Webstudio">Web Studio</a>
+      <a href="/index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
