--- a/index.html
+++ b/index.html
@@ -9,51 +9,63 @@
     <!-- Header section -->
     <header>
       <nav>
-        <a href="/index.html">WebStudio</a>
+        <a href="./index.html">WebStudio</a>
         <ul>
-          <li href="">Studio</li>
-          <li href="">Portfolio</li>
-          <li href="">Contacts</li>
+          <li>
+            <a href="">Studio</a>
+          </li>
+          <li>
+            <a href="">Portfolio</a>
+          </li>
+          <li>
+            <a href="">Contacts</a>
+          </li>
         </ul>
       </nav>
       <address>
-      <ul>
-        <li href="mailto:info@devstudio.com">info@devstudio.com</li>
-        <li href="tel:+110001111111">+11 (000) 111-11-11</li>
-    </address>
-      </ul>
+        <ul>
+          <li>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li>
+            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+          </li>
+        </ul>
+      </address>
     </header>
     <main>
       <!-- Hero section -->
       <h1>Effective Solutions for Your Business</h1>
-      <button type="button" href="">Order Service</button>
+      <button type="button">Order Service</button>
       <!-- Feature section -->
       <h2>Fetaure section</h2>
       <ul>
         <li>
           <h3>Strategy</h3>
           <p>
-            Our goal is to identify the business<br>problem to walk away with the<br>perfect and creative solution.
+            Our goal is to identify the business<br />problem to walk away with
+            the<br />perfect and creative solution.
           </p>
         </li>
         <li>
           <h3>Punctuality</h3>
           <p>
-            Bring the key message to the<br>brand's audience for the best price<br>within the shortest possible time.
+            Bring the key message to the<br />brand's audience for the best
+            price<br />within the shortest possible time.
           </p>
         </li>
         <li>
           <h3>Diligence</h3>
           <p>
-            Research and confirm brands that<br>present the strongest digital
-            growth<br>opportunities and minimize risk.
+            Research and confirm brands that<br />present the strongest digital
+            growth<br />opportunities and minimize risk.
           </p>
         </li>
         <li>
           <h3>Technologies</h3>
           <p>
-            Design practice focused on<br>digital experiences. We bring forth a
-            deep<br>passion for problem-solving.
+            Design practice focused on<br />digital experiences. We bring forth
+            a deep<br />passion for problem-solving.
           </p>
         </li>
       </ul>
@@ -62,9 +74,9 @@
       <ul>
         <li>
           <img
-            src="/images/mark-guerrero.jpg"
+            src="./images/mark-guerrero.jpg"
             alt="Mark Guerrero"
-            width="264px"
+            width="264"
             height="260"
           />
           <h3>Mark Guerrero</h3>
@@ -72,9 +84,9 @@
         </li>
         <li>
           <img
-            src="/images/tom-ford.jpg"
+            src="./images/tom-ford.jpg"
             alt="Tom Ford"
-            width="264px"
+            width="264"
             height="260"
           />
           <h3>Tom Ford</h3>
@@ -82,9 +94,9 @@
         </li>
         <li>
           <img
-            src="/images/camila-garcia.jpg"
+            src="./images/camila-garcia.jpg"
             alt="Camila Garcia"
-            width="264px"
+            width="264"
             height="260"
           />
           <h3>Camila Garcia</h3>
@@ -92,9 +104,9 @@
         </li>
         <li>
           <img
-            src="/images/daniel-wilson.jpg"
+            src="./images/daniel-wilson.jpg"
             alt="Daniel Wilson"
-            width="264px"
+            width="264"
             height="260"
           />
           <h3>Daniel Wilson</h3>
@@ -103,7 +115,7 @@
       </ul>
     </main>
     <footer>
-      <a href="/index.html">WebStudio</a>
+      <a href="./index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
